Fix the typos reported by Helge Kreutzmann in cleanup-info.8, deb.5, dpkg-scanpackages.1, and dpkg-scansources.1 manpages. And regenerate the POT and PO files.

--- a/man/C/cleanup-info.8
+++ b/man/C/cleanup-info.8
@@ -1,6 +1,6 @@
 .TH cleanup\-info 8 "2006-02-28" "Debian Project" "dpkg utilities"
 .SH NAME
-cleanup\-info - clean up the mess that bogus install-info may have done
+cleanup\-info \- clean up the mess that bogus install\-info may have done
 .
 .SH SYNOPSIS
 .B cleanup\-info
@@ -9,8 +9,10 @@ cleanup\-info - clean up the mess that bogus install-info may have done
 .
 .SH DESCRIPTION
 .B cleanup\-info
-is a Perl script that tries to clean up the mess that bogus install\-info may
-have done. It gathers all sections with the same heading into a single one.
+is a Perl script that tries to clean up the mess that bogus
+.BR install\-info (8)
+may have done.
+It gathers all sections with the same heading into a single one.
 It tries to be smart about cases and trailing colon/spaces.
 .br
 Other clean-ups include removing of empty sections, and squeezing the blank
@@ -22,7 +24,7 @@ Order of entries within a section is preserved.
 Please be \fBextremely careful\fP when using this utility - it might
 not be 100% safe. cleanup\-info tries to be careful with your info dir
 file, but only until it writes it. You should back the file up prior
-to using this.
+to using this script.
 .
 .SH OPTIONS
 .TP
