--- a/man/C/deb.5
+++ b/man/C/deb.5
@@ -35,7 +35,7 @@ be able to safely continue, unless it encounters an unexpected member
 in the archive (except at the end), as described below.
 .PP
 The second required member is named
-.B control.tar.gz .
+.BR control.tar.gz .
 It is a gzipped tar archive containing the package control information,
 as a series of plain files, of which the file
 .B control
@@ -45,7 +45,7 @@ tarball may optionally contain an entry for
 the current directory.
 .PP
 The third, last required member is named
-.B data.tar.gz .
+.BR data.tar.gz .
 It contains the filesystem archive as a gzipped tar archive.
 .PP
 These members must occur in this exact order. Current implementations
