--- a/man/C/dpkg-scanpackages.1
+++ b/man/C/dpkg-scanpackages.1
@@ -52,7 +52,7 @@ files except on local access (i.e.
 sources).
 .PP
 .I binarydir
-is the name of the binary tree to process (for example,
+is the name of the tree of the binary packages to process (for example,
 .BR contrib/binary\-i386 ).
 It is best to make this relative to the root of the Debian archive,
 because every Filename field in the new Packages file will start with
@@ -98,7 +98,7 @@ allowed (denoted with a
 .PP
 .I package
 is the name of the package. Entries in the override file for packages
-not found in the binary tree are ignored.
+not found in the tree of binary packages are ignored.
 .PP
 .I priority
 and
