--- a/man/C/dpkg-scansources.1
+++ b/man/C/dpkg-scansources.1
@@ -18,7 +18,9 @@ stdout.
 .PP
 The \fIoverride-file\fR, if given, is used to set priorities in the resulting
 index records and to override the maintainer field given in the \fI.dsc\fR
-files. See dpkg-scanpackages for the format of this file. \s-1NB:\s0  Since
+files. See
+.BR dpkg-scanpackages (1)
+for the format of this file. \s-1NB:\s0  Since
 the override file is indexed by binary, not source, packages, there's a bit
 of a problem here. The current implementation uses the highest priority of
 all the binary packages produced by a \fI.dsc\fR file for the priority of the
@@ -32,7 +34,7 @@ fields contain the path from the top of the Debian archive hierarchy.
 .PP
 .B Note:
 If you want to access the generated Sources file with
-.B apt
+.BR apt (8)
 you will probably need to compress the file with
 .BR gzip (1)
 (generating a Source.gz file). apt ignores uncompressed Sources files
