--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -4,6 +4,23 @@
 	before the SEE ALSO section, not at the end.
 	* po4a/add_de/deb-old.5.de.add: Likewise.
 	* po4a/add_de/deb.5.de.add: Likewise.
+	* C/cleanup-info.8: Typo fix.
+	* C/deb.5: Likewise.
+	* C/dpkg-scanpackages.1: Likewise.
+	* C/dpkg-scansources.1: Likewise.
+	* po4a/cleanup-info.8/po/cleanup-info.8.pot: Regenerated.
+	* po4a/deb.5/po/deb.5.pot: Likewise.
+	* po4a/dpkg-scanpackages.1/po/dpkg-scanpackages.1.pot: Likewise.
+	* po4a/dpkg-scansources.1/po/dpkg-scansources.1.pot: Likewise.
+	* po4a/cleanup-info.8/po/*.po: Merge with pot file.
+	Former completed translations become 29t2f.
+	* po4a/deb.5/po/*.po: Likewise.
+	Typo unfuzzied.
+	* po4a/dpkg-scanpackages.1/po/*.po: Likewise.
+	Former completed translations become 27t2f.
+	* po4a/dpkg-scansources.1/po/*.po: Likewise.
+	Typo unfuzzied.
+	* man/po4a/deb-old.5/po/de.po: Rewrap lines.
 
 2006-07-25  Helge Kreutzmann  <debian@helgefjell.de>
 
