--- a/man/po4a/deb.5/po/fr.po
+++ b/man/po4a/deb.5/po/fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-27 22:47+0200\n"
 "PO-Revision-Date: 2006-03-04 11:42+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -134,7 +134,7 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/deb.5:46
 msgid ""
-"The second required member is named B<control.tar.gz .> It is a gzipped tar "
+"The second required member is named B<control.tar.gz>.  It is a gzipped tar "
 "archive containing the package control information, as a series of plain "
 "files, of which the file B<control> is mandatory and contains the core "
 "control information. The control tarball may optionally contain an entry for "
@@ -150,10 +150,10 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/deb.5:50
 msgid ""
-"The third, last required member is named B<data.tar.gz .> It contains the "
+"The third, last required member is named B<data.tar.gz>.  It contains the "
 "filesystem archive as a gzipped tar archive."
 msgstr ""
-"Le troisième et dernier membre requis se nomme B<data.tar.gz.> Il contient "
+"Le troisième et dernier membre requis se nomme B<data.tar.gz>. Il contient "
 "les fichiers de données sous forme d'une archive tar compressée grâce à gzip."
 
 # type: Plain text
