--- a/man/po4a/deb.5/po/sv.po
+++ b/man/po4a/deb.5/po/sv.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-27 22:47+0200\n"
 "PO-Revision-Date: 2006-05-14 16:18+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
@@ -128,13 +128,13 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/deb.5:46
 msgid ""
-"The second required member is named B<control.tar.gz .> It is a gzipped tar "
+"The second required member is named B<control.tar.gz>.  It is a gzipped tar "
 "archive containing the package control information, as a series of plain "
 "files, of which the file B<control> is mandatory and contains the core "
 "control information. The control tarball may optionally contain an entry for "
 "`B<.>', the current directory."
 msgstr ""
-"Den andra nödvändiga posten heter B<control.tar.gz .> Det är ett gzip-packat "
+"Den andra nödvändiga posten heter B<control.tar.gz>. Det är ett gzip-packat "
 "tar-arkiv som innehåller paketets kontrollinformation, lagrade som ett antal "
 "vanliga filer, av vilka filen B<control> krävs och innehåller grundläggande "
 "kontrollinformation. Tarbollen control kan eventuellt innehålla en post för "
@@ -143,10 +143,10 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/deb.5:50
 msgid ""
-"The third, last required member is named B<data.tar.gz .> It contains the "
+"The third, last required member is named B<data.tar.gz>.  It contains the "
 "filesystem archive as a gzipped tar archive."
 msgstr ""
-"Den tredje och sista nödvändiga posten heter B<data.tar.gz .> Den innehåller "
+"Den tredje och sista nödvändiga posten heter B<data.tar.gz>. Den innehåller "
 "filsystemsarkivet, lagrat som ett gzip-packat tar-arkiv."
 
 # type: Plain text
