--- a/man/po4a/dpkg-scanpackages.1/po/es.po
+++ b/man/po4a/dpkg-scanpackages.1/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:07+0200\n"
+"POT-Creation-Date: 2006-07-27 22:47+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
@@ -103,10 +103,10 @@ msgstr ""
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:60
 #, fuzzy
 msgid ""
-"I<binarydir> is the name of the binary tree to process (for example, "
-"B<contrib/binary-i386>).  It is best to make this relative to the root of "
-"the Debian archive, because every Filename field in the new Packages file "
-"will start with this string."
+"I<binarydir> is the name of the tree of the binary packages to process (for "
+"example, B<contrib/binary-i386>).  It is best to make this relative to the "
+"root of the Debian archive, because every Filename field in the new Packages "
+"file will start with this string."
 msgstr ""
 "I<bindir> es el nombre del árbol de directorios que contiene los binarios "
 "que se desea procesar (por ejemplo, B<contrib/binary-i386>).  Es mejor hacer "
@@ -205,7 +205,7 @@ msgstr "I<paquete> I<prioridad> I<sección> [I<información_del_mantenedor>]"
 #, fuzzy
 msgid ""
 "I<package> is the name of the package. Entries in the override file for "
-"packages not found in the binary tree are ignored."
+"packages not found in the tree of binary packages are ignored."
 msgstr ""
 "I<paquete> El nombre del paquete.  Las entradas en el fichero de override de "
 "un paquete no encontrado en el directorio son descartadas."
