--- a/man/po4a/dpkg-scanpackages.1/po/fr.po
+++ b/man/po4a/dpkg-scanpackages.1/po/fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:07+0200\n"
+"POT-Creation-Date: 2006-07-27 22:47+0200\n"
 "PO-Revision-Date: 2006-05-14 10:46+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -102,15 +102,16 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:60
 msgid ""
-"I<binarydir> is the name of the binary tree to process (for example, "
-"B<contrib/binary-i386>).  It is best to make this relative to the root of "
-"the Debian archive, because every Filename field in the new Packages file "
-"will start with this string."
+"I<binarydir> is the name of the tree of the binary packages to process (for "
+"example, B<contrib/binary-i386>).  It is best to make this relative to the "
+"root of the Debian archive, because every Filename field in the new Packages "
+"file will start with this string."
 msgstr ""
-"I<rep-de-binaires> est le nom de l'arborescence binaire (par exemple "
-"B<contrib/binary-i386)> que l'on veut traiter. Il vaut mieux qu'elle soit "
-"relative à la racine de l'archive Debian\\ ; ainsi chaque champ «\\ Filename"
-"\\ » dans le nouveau fichier «\\ Packages\\ » commencera par cette chaîne."
+"I<rep-de-binaires> est le nom de l'arborescence des paquets binaires (par "
+"exemple B<contrib/binary-i386)> que l'on veut traiter. Il vaut mieux qu'elle "
+"soit relative à la racine de l'archive Debian\\ ; ainsi chaque champ «\\ "
+"Filename\\ » dans le nouveau fichier «\\ Packages\\ » commencera par cette "
+"chaîne."
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:64
@@ -202,10 +203,11 @@ msgstr "I<paquet> I<priorité> I<section> [I<responsable>]"
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:102
 msgid ""
 "I<package> is the name of the package. Entries in the override file for "
-"packages not found in the binary tree are ignored."
+"packages not found in the tree of binary packages are ignored."
 msgstr ""
 "I<paquet> est le nom du paquet. Les entrées du fichier «\\ override\\ » "
-"concernant des paquets qui ne sont pas dans l'arborescence sont ignorées."
+"concernant des paquets qui ne sont pas dans l'arborescence des paquets "
+"binaires sont ignorées."
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:111
