--- a/man/po4a/dpkg-scanpackages.1/po/ja.po
+++ b/man/po4a/dpkg-scanpackages.1/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:07+0200\n"
+"POT-Creation-Date: 2006-07-27 22:47+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -102,10 +102,10 @@ msgstr ""
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:60
 #, fuzzy
 msgid ""
-"I<binarydir> is the name of the binary tree to process (for example, "
-"B<contrib/binary-i386>).  It is best to make this relative to the root of "
-"the Debian archive, because every Filename field in the new Packages file "
-"will start with this string."
+"I<binarydir> is the name of the tree of the binary packages to process (for "
+"example, B<contrib/binary-i386>).  It is best to make this relative to the "
+"root of the Debian archive, because every Filename field in the new Packages "
+"file will start with this string."
 msgstr ""
 "I<binarydir> は処理するバイナリツリーの名前である(例えば B<contrib/binary-"
 "i386> など)。 Debian アーカイブのルートからの相対にしておくのが最もいい方法で"
@@ -200,7 +200,7 @@ msgstr "I<package> I<priority> I<section> [I<maintainerinfo>]"
 #, fuzzy
 msgid ""
 "I<package> is the name of the package. Entries in the override file for "
-"packages not found in the binary tree are ignored."
+"packages not found in the tree of binary packages are ignored."
 msgstr ""
 "I<package> はパッケージ名である。override ファイルにあるがバイナリツリーには "
 "ないパッケージ名のエントリは無視される。"
