--- a/man/po4a/deb.5/po/de.po
+++ b/man/po4a/deb.5/po/de.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-27 22:47+0200\n"
 "PO-Revision-Date: 2006-07-24 22:34+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -133,13 +133,13 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/deb.5:46
 msgid ""
-"The second required member is named B<control.tar.gz .> It is a gzipped tar "
+"The second required member is named B<control.tar.gz>.  It is a gzipped tar "
 "archive containing the package control information, as a series of plain "
 "files, of which the file B<control> is mandatory and contains the core "
 "control information. The control tarball may optionally contain an entry for "
 "`B<.>', the current directory."
 msgstr ""
-"Das zweite erforderliche Mitglied heißt B<control.tar.gz .>. Es ist ein "
+"Das zweite erforderliche Mitglied heißt B<control.tar.gz>. Es ist ein "
 "gezipptes Tar-Archiv, dass die Kontrollinformationen als eine Reihe von "
 "normalen Dateien enthält, von denen die Datei B<control> zwingend "
 "erforderlich ist und die Kern-Kontrollinformationen enthält. Der Kontroll-"
@@ -149,10 +149,10 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/deb.5:50
 msgid ""
-"The third, last required member is named B<data.tar.gz .> It contains the "
+"The third, last required member is named B<data.tar.gz>.  It contains the "
 "filesystem archive as a gzipped tar archive."
 msgstr ""
-"Das dritte und letzte benötigte Mitglied heißt B<data.tar.gz .> Es enthält "
+"Das dritte und letzte benötigte Mitglied heißt B<data.tar.gz>. Es enthält "
 "das Dateisystemarchiv als gezipptes Tar-Archiv."
 
 # type: Plain text
