--- a/man/po4a/deb.5/po/deb.5.pot
+++ b/man/po4a/deb.5/po/deb.5.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-27 22:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -115,7 +115,7 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/deb.5:46
 msgid ""
-"The second required member is named B<control.tar.gz .> It is a gzipped tar "
+"The second required member is named B<control.tar.gz>.  It is a gzipped tar "
 "archive containing the package control information, as a series of plain "
 "files, of which the file B<control> is mandatory and contains the core "
 "control information. The control tarball may optionally contain an entry for "
@@ -125,7 +125,7 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/deb.5:50
 msgid ""
-"The third, last required member is named B<data.tar.gz .> It contains the "
+"The third, last required member is named B<data.tar.gz>.  It contains the "
 "filesystem archive as a gzipped tar archive."
 msgstr ""
 
