--- a/man/po4a/deb.5/po/ja.po
+++ b/man/po4a/deb.5/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-27 22:47+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -140,7 +140,7 @@ msgstr ""
 #: ../../../man/po4a/../C/deb.5:46
 #, fuzzy
 msgid ""
-"The second required member is named B<control.tar.gz .> It is a gzipped tar "
+"The second required member is named B<control.tar.gz>.  It is a gzipped tar "
 "archive containing the package control information, as a series of plain "
 "files, of which the file B<control> is mandatory and contains the core "
 "control information. The control tarball may optionally contain an entry for "
@@ -157,7 +157,7 @@ msgstr ""
 #: ../../../man/po4a/../C/deb.5:50
 #, fuzzy
 msgid ""
-"The third, last required member is named B<data.tar.gz .> It contains the "
+"The third, last required member is named B<data.tar.gz>.  It contains the "
 "filesystem archive as a gzipped tar archive."
 msgstr ""
 "最後の 3 番目に要請されるメンバーは B<data.tar.gz> というファイル名を持ち、"
