--- a/man/po4a/dpkg-scanpackages.1/po/dpkg-scanpackages.1.pot
+++ b/man/po4a/dpkg-scanpackages.1/po/dpkg-scanpackages.1.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-06-20 21:07+0200\n"
+"POT-Creation-Date: 2006-07-27 22:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -91,10 +91,10 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:60
 msgid ""
-"I<binarydir> is the name of the binary tree to process (for example, "
-"B<contrib/binary-i386>).  It is best to make this relative to the root of "
-"the Debian archive, because every Filename field in the new Packages file "
-"will start with this string."
+"I<binarydir> is the name of the tree of the binary packages to process (for "
+"example, B<contrib/binary-i386>).  It is best to make this relative to the "
+"root of the Debian archive, because every Filename field in the new Packages "
+"file will start with this string."
 msgstr ""
 
 # type: Plain text
@@ -163,7 +163,7 @@ msgstr ""
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:102
 msgid ""
 "I<package> is the name of the package. Entries in the override file for "
-"packages not found in the binary tree are ignored."
+"packages not found in the tree of binary packages are ignored."
 msgstr ""
 
 # type: Plain text
