[l10n:ro] minor wording improvements

--- a/po/ro.po
+++ b/po/ro.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-21 07:26+0300\n"
-"PO-Revision-Date: 2006-06-22 22:49+0300\n"
+"PO-Revision-Date: 2006-07-28 11:45+0300\n"
 "Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1228,7 +1228,7 @@ msgstr "Versiunea %.250s a lui %.250s este deja instalată, se omite.\n"
 msgid "%s - warning: downgrading %.250s from %.250s to %.250s.\n"
 msgstr ""
 "%s - atenţie: se instalează versiunea mai veche a lui %.250s pornind de la "
-"%.250s la %.250s.\n"
+"%.250s către %.250s.\n"
 
 #: src/archives.c:1129
 #, c-format
@@ -2477,7 +2477,7 @@ msgstr "--debug necesită un argument octal"
 #, c-format
 msgid "null package name in --ignore-depends comma-separated list `%.250s'"
 msgstr ""
-"lipsă nume de pachet în lista separată prin virgule „%.250s” de la --ignore-"
+"lipseşte numele de pachet în lista separată prin virgule „%.250s” de la --ignore-"
 "depends"
 
 #: src/main.c:271
@@ -3640,7 +3640,7 @@ msgstr "versiunea de arhivă %.250s neînţeleasă, instalaţi un dpkg-deb mai n
 #: dpkg-deb/extract.c:146 dpkg-deb/extract.c:175
 #, c-format
 msgid "skipped member data from %s"
-msgstr "omisiune componentă de date de la %s"
+msgstr "s-a omis componenta de date de la %s"
 
 #: dpkg-deb/extract.c:165
 #, c-format
