--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-28  Eddy Petrişor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Wodring improvements
+
 2006-07-26  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Typo correction "ceoendant"
