German translation update of the cleanup-info.8 and dpkg-scanpackages.1 man pages.

--- a/man/po4a/cleanup-info.8/po/de.po
+++ b/man/po4a/cleanup-info.8/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-27 22:47+0200\n"
-"PO-Revision-Date: 2006-07-23 14:53+0200\n"
+"PO-Revision-Date: 2006-07-28 17:01+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -71,7 +71,6 @@ msgstr "BESCHREIBUNG"
 
 # type: Plain text
 #: ../../../man/po4a/../C/cleanup-info.8:17
-#, fuzzy
 msgid ""
 "B<cleanup-info> is a Perl script that tries to clean up the mess that bogus "
 "B<install-info>(8)  may have done.  It gathers all sections with the same "
@@ -79,8 +78,8 @@ msgid ""
 "colon/spaces."
 msgstr ""
 "B<cleanup-info> ist ein Perlskript das versucht, den Müll aufzuräumen, den "
-"ein schwindelhaftes install-info hinterlassen haben könnte. Es sammelt alle "
-"Bereiche mit der gleichen Überschrift in einen einzelnen zusammen. Es "
+"ein schwindelhaftes B<install-info>(8) hinterlassen haben könnte. Es sammelt "
+"alle Bereiche mit der gleichen Überschrift in einen einzelnen zusammen. Es "
 "versucht, pfiffig über Groß-/Kleinschreibung und angehängte Doppelpunkte/"
 "Leerzeichen zu sein."
 
@@ -104,7 +103,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/cleanup-info.8:28
-#, fuzzy
 msgid ""
 "Please be B<extremely careful> when using this utility - it might not be "
 "100% safe. cleanup-info tries to be careful with your info dir file, but "
@@ -114,7 +112,7 @@ msgstr ""
 "Bitte seien Sie B<extrem vorsichtig> bei der Verwendung diese "
 "Hilfswerkzeuges - es könnte nicht 100 % sicher sein. cleanup-info versucht "
 "vorsichtig mit Ihrer Info-Dir-Datei zu sein, aber nur bis es sie schreibt. "
-"Sie sollten eine Sicherheitskopie anlegen, bevor sie dies verwenden."
+"Sie sollten eine Sicherheitskopie anlegen, bevor sie dies Skript verwenden."
 
 # type: SH
 #: ../../../man/po4a/../C/cleanup-info.8:29
