--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-28  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po4a/cleanup-info.8/po/de.po: Updated translation.
+	* po4a/dpkg-scanpackages.1/po/de.po: Likewise.
+
 2006-07-27  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po4a/add_de/dpkg-scanpackages.1.de.add: install the addendum
