--- a/man/po4a/dpkg-scanpackages.1/po/de.po
+++ b/man/po4a/dpkg-scanpackages.1/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-27 22:47+0200\n"
-"PO-Revision-Date: 2006-07-25 21:08+0200\n"
+"PO-Revision-Date: 2006-07-28 17:04+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -103,14 +103,13 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:60
-#, fuzzy
 msgid ""
 "I<binarydir> is the name of the tree of the binary packages to process (for "
 "example, B<contrib/binary-i386>).  It is best to make this relative to the "
 "root of the Debian archive, because every Filename field in the new Packages "
 "file will start with this string."
 msgstr ""
-"I<Binärverz> ist der Name des zu verarbeitenden binären Baums "
+"I<Binärverz> ist der Name des zu verarbeitenden Baums von Binärpaketen "
 "(beispielsweise B<contrib/binary-i386>). Am besten wird dies relativ zur "
 "Wurzel des Debian-Archivs erstellt, da jedes Filename-Feld in der neuen "
 "Packages-Datei mit dieser Zeichenkette beginnen wird."
@@ -198,13 +197,12 @@ msgstr "I<Paket> I<Priorität> I<Bereich> [I<Betreuerinformation>]"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:102
-#, fuzzy
 msgid ""
 "I<package> is the name of the package. Entries in the override file for "
 "packages not found in the tree of binary packages are ignored."
 msgstr ""
 "I<Paket> ist der Name des Pakets. Einträge in der Override-Datei für Pakete "
-"die nicht im Binärbaum gefunden werden können, werden ignoriert."
+"die nicht im Baum von Binärpaketen gefunden werden können, werden ignoriert."
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:111
