Apply suggestions by Helge Kreutzman and regenerate the POT and POs.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,10 @@
+2006-07-29  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* C/dpkg-name.1: Typo fix.
+	* po4a/dpkg-name.1/po/dpkg-name.1.pot: Regenerated.
+	* po4a/dpkg-name.1/po/*.po: Merge with pot file.
+	Former completed translations become 39t3f.
+
 2006-07-28  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po4a/cleanup-info.8/po/de.po: Updated translation.
