--- a/man/po4a/dpkg-name.1/po/es.po
+++ b/man/po4a/dpkg-name.1/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:07+0200\n"
+"POT-Creation-Date: 2006-07-28 21:10+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
@@ -82,8 +82,8 @@ msgid ""
 "package name consists of "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb as specified "
 "in the control file of the package. The E<lt>versionE<gt> part of the "
-"filename consists of the mainstream version information optionally followed "
-"by a hyphen and the revision information."
+"filename consists of the upstream version information optionally followed by "
+"a hyphen and the revision information."
 msgstr ""
 "Esta pagina de manual trata sobre B<dpkg-name> , un programa hecho en sh que "
 "ofrece una manera fácil de renombrar paquetes B<Debian> a nombres de "
@@ -149,15 +149,16 @@ msgstr "B<-s, --subdir [directorio]>"
 #: ../../../man/po4a/../C/dpkg-name.1:56
 #, fuzzy
 msgid ""
-"Files will be moved into subdir. If directory given as argument exists the "
-"files will be moved into that directory otherwise the name of the target "
-"directory is extracted from the section field in the control part of the "
-"package. The target directory will be `unstable/binary-"
-"E<lt>architectureE<gt>/E<lt>sectionE<gt>'. If the section is `non-free', "
-"`contrib' or no section information is found in the control file the target "
-"directory is `E<lt>sectionE<gt>/binary-E<lt>architectureE<gt>'. The section "
-"field isn't required so a lot of packages will find their way to the `no-"
-"section' area. Use this option with care, it's messy."
+"Files will be moved into a subdirectory. If the directory given as argument "
+"exists the files will be moved into that directory otherwise the name of the "
+"target directory is extracted from the section field in the control part of "
+"the package. The target directory will be `unstable/binary-"
+"E<lt>architectureE<gt>/E<lt>sectionE<gt>'. If the section is not found in "
+"the control, then `no-section' is assumed, and in this case, as well as for "
+"sections `non-free' and `contrib' the target directory is `E<lt>sectionE<gt>/"
+"binary-E<lt>architectureE<gt>'. The section field isn't required so a lot of "
+"packages will find their way to the `no-section' area. Use this option with "
+"care, it's messy."
 msgstr ""
 "Se moverán los archivos dentro del subdirectorio especificado. Si existe el "
 "directorio dado como argumento, los archivos se moverán dentro del "
@@ -303,14 +304,14 @@ msgid "BUGS"
 msgstr "ERRATAS"
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:97
+#: ../../../man/po4a/../C/dpkg-name.1:100
 #, fuzzy
 msgid ""
 "Some packages don't follow the name structure "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb. Packages "
 "renamed by dpkg-name will follow this structure. Generally this will have no "
-"impact on how packages are installed by dselect/dpkg, but other installation "
-"tools might depend on this naming structure."
+"impact on how packages are installed by B<dselect>(1)/ B<dpkg>(1), but other "
+"installation tools might depend on this naming structure."
 msgstr ""
 "Algunos paquetes no siguen la misma estructura de "
 "E<lt>paqueteE<gt>_E<lt>versiónE<gt>_E<lt>arquitecturaE<gt>.deb. Los paquetes "
@@ -319,13 +320,13 @@ msgstr ""
 "otras herramientas de instalación podrían depender de esta estructura."
 
 # type: SH
-#: ../../../man/po4a/../C/dpkg-name.1:97
+#: ../../../man/po4a/../C/dpkg-name.1:100
 #, fuzzy, no-wrap
 msgid "SEE ALSO"
 msgstr "VÉASE TAMBIÉN"
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:104
+#: ../../../man/po4a/../C/dpkg-name.1:107
 #, fuzzy
 msgid ""
 "B<deb>(5), B<deb-control>(5), B<dpkg>(1), B<dpkg-deb>(1), B<find>(1), "
@@ -335,13 +336,13 @@ msgstr ""
 "B<xargs>(1)."
 
 # type: SH
-#: ../../../man/po4a/../C/dpkg-name.1:104
+#: ../../../man/po4a/../C/dpkg-name.1:107
 #, fuzzy, no-wrap
 msgid "COPYRIGHT"
 msgstr "COPYRIGHT"
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:110
+#: ../../../man/po4a/../C/dpkg-name.1:113
 #, fuzzy
 msgid ""
 "Copyright 1995,1996 Erick Branderhorst.  B<dpkg-name> is free software; see "
