--- a/man/po4a/dpkg-name.1/po/ja.po
+++ b/man/po4a/dpkg-name.1/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:07+0200\n"
+"POT-Creation-Date: 2006-07-28 21:10+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -82,8 +82,8 @@ msgid ""
 "package name consists of "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb as specified "
 "in the control file of the package. The E<lt>versionE<gt> part of the "
-"filename consists of the mainstream version information optionally followed "
-"by a hyphen and the revision information."
+"filename consists of the upstream version information optionally followed by "
+"a hyphen and the revision information."
 msgstr ""
 "このマニュアルページでは、 B<dpkg-name> シェルスクリプトについて説明する。 "
 "B<dpkg-name> シェルスクリプトは、 B<Debian> パッケージを完全なパッケージ名"
@@ -147,15 +147,16 @@ msgstr "B<-s, --subdir [dir]>"
 #: ../../../man/po4a/../C/dpkg-name.1:56
 #, fuzzy
 msgid ""
-"Files will be moved into subdir. If directory given as argument exists the "
-"files will be moved into that directory otherwise the name of the target "
-"directory is extracted from the section field in the control part of the "
-"package. The target directory will be `unstable/binary-"
-"E<lt>architectureE<gt>/E<lt>sectionE<gt>'. If the section is `non-free', "
-"`contrib' or no section information is found in the control file the target "
-"directory is `E<lt>sectionE<gt>/binary-E<lt>architectureE<gt>'. The section "
-"field isn't required so a lot of packages will find their way to the `no-"
-"section' area. Use this option with care, it's messy."
+"Files will be moved into a subdirectory. If the directory given as argument "
+"exists the files will be moved into that directory otherwise the name of the "
+"target directory is extracted from the section field in the control part of "
+"the package. The target directory will be `unstable/binary-"
+"E<lt>architectureE<gt>/E<lt>sectionE<gt>'. If the section is not found in "
+"the control, then `no-section' is assumed, and in this case, as well as for "
+"sections `non-free' and `contrib' the target directory is `E<lt>sectionE<gt>/"
+"binary-E<lt>architectureE<gt>'. The section field isn't required so a lot of "
+"packages will find their way to the `no-section' area. Use this option with "
+"care, it's messy."
 msgstr ""
 "ファイルを subdir で指定したディレクトリに移動する。もし引数で指定した ディレ"
 "クトリが存在すれば、パッケージの control のセクションフィールド から得られた"
@@ -296,14 +297,14 @@ msgid "BUGS"
 msgstr "バグ"
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:97
+#: ../../../man/po4a/../C/dpkg-name.1:100
 #, fuzzy
 msgid ""
 "Some packages don't follow the name structure "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb. Packages "
 "renamed by dpkg-name will follow this structure. Generally this will have no "
-"impact on how packages are installed by dselect/dpkg, but other installation "
-"tools might depend on this naming structure."
+"impact on how packages are installed by B<dselect>(1)/ B<dpkg>(1), but other "
+"installation tools might depend on this naming structure."
 msgstr ""
 "パッケージによっては E<lt>パッケージE<gt>_E<lt>バージョンE<gt>_E<lt>アーキテ"
 "クチャE<gt>.deb という名前ではない。 dpkg-name によって改名されたパッケージは"
@@ -312,13 +313,13 @@ msgstr ""
 "トールツールに よっては影響があるかもしれない。"
 
 # type: SH
-#: ../../../man/po4a/../C/dpkg-name.1:97
+#: ../../../man/po4a/../C/dpkg-name.1:100
 #, fuzzy, no-wrap
 msgid "SEE ALSO"
 msgstr "関連項目"
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:104
+#: ../../../man/po4a/../C/dpkg-name.1:107
 #, fuzzy
 msgid ""
 "B<deb>(5), B<deb-control>(5), B<dpkg>(1), B<dpkg-deb>(1), B<find>(1), "
@@ -328,13 +329,13 @@ msgstr ""
 "B<xargs>(1)."
 
 # type: SH
-#: ../../../man/po4a/../C/dpkg-name.1:104
+#: ../../../man/po4a/../C/dpkg-name.1:107
 #, fuzzy, no-wrap
 msgid "COPYRIGHT"
 msgstr "COPYRIGHT"
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:110
+#: ../../../man/po4a/../C/dpkg-name.1:113
 #, fuzzy
 msgid ""
 "Copyright 1995,1996 Erick Branderhorst.  B<dpkg-name> is free software; see "
