--- a/man/po4a/dpkg-name.1/po/dpkg-name.1.pot
+++ b/man/po4a/dpkg-name.1/po/dpkg-name.1.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-06-20 21:07+0200\n"
+"POT-Creation-Date: 2006-07-28 21:10+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -78,8 +78,8 @@ msgid ""
 "package name consists of "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb as specified "
 "in the control file of the package. The E<lt>versionE<gt> part of the "
-"filename consists of the mainstream version information optionally followed "
-"by a hyphen and the revision information."
+"filename consists of the upstream version information optionally followed by "
+"a hyphen and the revision information."
 msgstr ""
 
 # type: SH
@@ -132,13 +132,13 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:56
 msgid ""
-"Files will be moved into subdir. If directory given as argument exists the "
-"files will be moved into that directory otherwise the name of the target "
-"directory is extracted from the section field in the control part of the "
-"package. The target directory will be "
+"Files will be moved into a subdirectory. If the directory given as argument "
+"exists the files will be moved into that directory otherwise the name of the "
+"target directory is extracted from the section field in the control part of "
+"the package. The target directory will be "
 "`unstable/binary-E<lt>architectureE<gt>/E<lt>sectionE<gt>'. If the section "
-"is `non-free', `contrib' or no section information is found in the control "
-"file the target directory is "
+"is not found in the control, then `no-section' is assumed, and in this case, "
+"as well as for sections `non-free' and `contrib' the target directory is "
 "`E<lt>sectionE<gt>/binary-E<lt>architectureE<gt>'. The section field isn't "
 "required so a lot of packages will find their way to the `no-section' "
 "area. Use this option with care, it's messy."
@@ -257,36 +257,36 @@ msgid "BUGS"
 msgstr ""
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:97
+#: ../../../man/po4a/../C/dpkg-name.1:100
 msgid ""
 "Some packages don't follow the name structure "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb. Packages "
 "renamed by dpkg-name will follow this structure. Generally this will have no "
-"impact on how packages are installed by dselect/dpkg, but other installation "
-"tools might depend on this naming structure."
+"impact on how packages are installed by B<dselect>(1)/ B<dpkg>(1), but other "
+"installation tools might depend on this naming structure."
 msgstr ""
 
 # type: SH
-#: ../../../man/po4a/../C/dpkg-name.1:97
+#: ../../../man/po4a/../C/dpkg-name.1:100
 #, no-wrap
 msgid "SEE ALSO"
 msgstr ""
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:104
+#: ../../../man/po4a/../C/dpkg-name.1:107
 msgid ""
 "B<deb>(5), B<deb-control>(5), B<dpkg>(1), B<dpkg-deb>(1), B<find>(1), "
 "B<xargs>(1)."
 msgstr ""
 
 # type: SH
-#: ../../../man/po4a/../C/dpkg-name.1:104
+#: ../../../man/po4a/../C/dpkg-name.1:107
 #, no-wrap
 msgid "COPYRIGHT"
 msgstr ""
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:110
+#: ../../../man/po4a/../C/dpkg-name.1:113
 msgid ""
 "Copyright 1995,1996 Erick Branderhorst.  B<dpkg-name> is free software; see "
 "the GNU General Public Licence version 2 or later for copying "
