--- a/man/po4a/dpkg-name.1/po/fr.po
+++ b/man/po4a/dpkg-name.1/po/fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:07+0200\n"
+"POT-Creation-Date: 2006-07-28 21:10+0200\n"
 "PO-Revision-Date: 2006-05-14 10:21+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -73,14 +73,15 @@ msgstr "DESCRIPTION"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:33
+#, fuzzy
 msgid ""
 "This manual page documents the B<dpkg-name> sh script which provides an easy "
 "way to rename B<Debian> packages into their full package names. A full "
 "package name consists of "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb as specified "
 "in the control file of the package. The E<lt>versionE<gt> part of the "
-"filename consists of the mainstream version information optionally followed "
-"by a hyphen and the revision information."
+"filename consists of the upstream version information optionally followed by "
+"a hyphen and the revision information."
 msgstr ""
 "Cette page de manuel documente le script sh B<dpkg-name>. Celui-ci fournit "
 "une façon simple de redonner aux paquets B<Debian> leur nom complet. Ce nom "
@@ -142,16 +143,18 @@ msgstr "B<-s, --subdir> [I<rep>]"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:56
+#, fuzzy
 msgid ""
-"Files will be moved into subdir. If directory given as argument exists the "
-"files will be moved into that directory otherwise the name of the target "
-"directory is extracted from the section field in the control part of the "
-"package. The target directory will be `unstable/binary-"
-"E<lt>architectureE<gt>/E<lt>sectionE<gt>'. If the section is `non-free', "
-"`contrib' or no section information is found in the control file the target "
-"directory is `E<lt>sectionE<gt>/binary-E<lt>architectureE<gt>'. The section "
-"field isn't required so a lot of packages will find their way to the `no-"
-"section' area. Use this option with care, it's messy."
+"Files will be moved into a subdirectory. If the directory given as argument "
+"exists the files will be moved into that directory otherwise the name of the "
+"target directory is extracted from the section field in the control part of "
+"the package. The target directory will be `unstable/binary-"
+"E<lt>architectureE<gt>/E<lt>sectionE<gt>'. If the section is not found in "
+"the control, then `no-section' is assumed, and in this case, as well as for "
+"sections `non-free' and `contrib' the target directory is `E<lt>sectionE<gt>/"
+"binary-E<lt>architectureE<gt>'. The section field isn't required so a lot of "
+"packages will find their way to the `no-section' area. Use this option with "
+"care, it's messy."
 msgstr ""
 "Met les fichiers dans rep. Si le répertoire donné en argument existe, les "
 "fichiers sont déplacés dans ce répertoire\\ ; sinon le répertoire cible, "
@@ -292,13 +295,14 @@ msgid "BUGS"
 msgstr "BOGUES"
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:97
+#: ../../../man/po4a/../C/dpkg-name.1:100
+#, fuzzy
 msgid ""
 "Some packages don't follow the name structure "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb. Packages "
 "renamed by dpkg-name will follow this structure. Generally this will have no "
-"impact on how packages are installed by dselect/dpkg, but other installation "
-"tools might depend on this naming structure."
+"impact on how packages are installed by B<dselect>(1)/ B<dpkg>(1), but other "
+"installation tools might depend on this naming structure."
 msgstr ""
 "Certains paquets ne respectent pas l'organisation "
 "E<lt>paquetE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb. Les paquets "
@@ -307,13 +311,13 @@ msgstr ""
 "systèmes d'installation aient besoin de cette organisation."
 
 # type: SH
-#: ../../../man/po4a/../C/dpkg-name.1:97
+#: ../../../man/po4a/../C/dpkg-name.1:100
 #, no-wrap
 msgid "SEE ALSO"
 msgstr "VOIR AUSSI"
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:104
+#: ../../../man/po4a/../C/dpkg-name.1:107
 msgid ""
 "B<deb>(5), B<deb-control>(5), B<dpkg>(1), B<dpkg-deb>(1), B<find>(1), "
 "B<xargs>(1)."
@@ -322,13 +326,13 @@ msgstr ""
 "B<xargs>(1)."
 
 # type: SH
-#: ../../../man/po4a/../C/dpkg-name.1:104
+#: ../../../man/po4a/../C/dpkg-name.1:107
 #, no-wrap
 msgid "COPYRIGHT"
 msgstr "COPYRIGHT"
 
 # type: Plain text
-#: ../../../man/po4a/../C/dpkg-name.1:110
+#: ../../../man/po4a/../C/dpkg-name.1:113
 msgid ""
 "Copyright 1995,1996 Erick Branderhorst.  B<dpkg-name> is free software; see "
 "the GNU General Public Licence version 2 or later for copying conditions. "
