Add the German translation of the dpkg-name.1 man page.

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - dpkg-scanpackages.1: Closes: #379825
     - dpkg-scansources.1: Closes: #379985
     - cleanup-info.8: Closes: #380130
+    - dpkg-name.1: Closes: #380239
 
   [ Nicolas François ]
   * Specify --null before the -T tar's option to avoid the "tar: -: file name
