--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2006-07-29  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po4a/dpkg-name.1/dpkg-name.1.cfg: Add the `de' language.
+	* po4a/dpkg-name.1/po/de.po: New translation.
+	* po4a/add_de/dpkg-name.1.de.add: Addendum for the new translation.
+
 2006-07-29  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* C/dpkg-name.1: Typo fix.
