Fix the Debian French translation team address.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-29  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* po4a/add_fr/*.add: Fix the Debian French translation team address.
+
 2006-07-29  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po4a/dpkg-name.1/dpkg-name.1.cfg: Add the `de' language.
