Most of the German man pages were added, not updated.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * German (Helge Kreutzmann). Closes: #379030
     - start-stop-daemon.8.
     - update-alternatives.8.
+
+  [ Added man pages translations ]
+  * German (Helge Kreutzmann):
     - dpkg.cfg.5. Closes: #379286
     - dselect.cfg.5. Closes: #379298
     - 822-date.1. Closes: #379417
