Applies Helge Kreutzmann's suggestions on dpkg-statoverride.8. Regenerates dpkg-statoverride.8.pot and dpkg-architecture.1.pot.

--- a/man/C/dpkg-architecture.1
+++ b/man/C/dpkg-architecture.1
@@ -259,7 +259,7 @@ but remember that we are only trying to be backward compatible with native
 compilation).
 .PP
 The \fB\-e\fP and \fB\-i\fP options were only introduced in relatively recent
-versions of \fBdpkg\-architecture\fR (since dpkg 1.13.13),
+versions of \fBdpkg\-architecture\fR (since dpkg 1.13.13).
 .
 .SH "SEE ALSO"
 .BR dpkg\-buildpackage (1),
