--- a/man/C/dpkg-statoverride.8
+++ b/man/C/dpkg-statoverride.8
@@ -17,7 +17,9 @@ dpkg\-statoverride - override ownership and mode of files
 .RI [ <glob-pattern> ]
 .
 .SH DESCRIPTION
-`\fBstat overrides\fR' are a way to tell dpkg to use a different owner
+`\fBstat overrides\fR' are a way to tell
+.BR dpkg (1)
+to use a different owner
 or mode for a file when a package is installed. (note: I use the word
 `file' here, but in reality this can be any filesystem object that dpkg
 handles, including directories, devices, etc.). This can be used to
@@ -35,7 +37,7 @@ Add an override for \fB<file>\fR. \fB<file>\fR does not need to exist
 when this command is used; the override will be stored and used later.
 Users and groups can be specified by their name (for example \fBroot\fR
 or \fBnobody\fR), or by their number by prepending the number with a
-\fB#\fR' (for example \fB#0\fR or \fB#65534\fR).
+`\fB#\fR' (for example \fB#0\fR or \fB#65534\fR).
 
 If \-\-update is specified and \fB<file>\fR exists, it is immediately
 set to the new owner and mode.
