--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,6 +1,12 @@
 2006-07-29  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po4a/add_fr/*.add: Fix the Debian French translation team address.
+	* C/dpkg-architecture.1: Typo fix.
+	* C/dpkg-statoverride.8: Likewise.
+	* po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Regenerated.
+	* po4a/dpkg-statoverride.8/po/dpkg-statoverride.8.pot: Likewise.
+	* po4a/dpkg-statoverride.8/po/*.po: Merge with pot file.
+	Former completed translations become 42t2f.
 
 2006-07-29  Helge Kreutzmann  <debian@helgefjell.de>
 
