--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - dpkg-scansources.1: Closes: #379985
     - cleanup-info.8: Closes: #380130
     - dpkg-name.1: Closes: #380239
+    - dpkg-statoverride.8: Closes: #380365
 
   [ Nicolas François ]
   * Specify --null before the -T tar's option to avoid the "tar: -: file name
