Add the Japanese translations of the 822-date(1), deb(5), deb-old(5) and dpkg-checkbuilddeps(1) man pages. Thanks to KISE Hiroshi.

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,11 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - cleanup-info.8: Closes: #380130
     - dpkg-name.1: Closes: #380239
     - dpkg-statoverride.8: Closes: #380365
+  * Japanese (KISE Hiroshi). Closes: 381141
+    - 822-date.1
+    - deb.5
+    - deb-old.5
+    - dpkg-checkbuilddeps.1
 
   [ Nicolas François ]
   * Specify --null before the -T tar's option to avoid the "tar: -: file name
