--- a/man/po4a/deb-old.5/po/ja.po
+++ b/man/po4a/deb-old.5/po/ja.po
@@ -1,141 +1,132 @@
+# translation of deb-old.5.ja.po to Japanese
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Copyright (C) 2006 Free Software Foundation, Inc.
+# KISE Hiroshi <kise@fuyuneko.jp>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+"PO-Revision-Date: 2006-07-26 22:40+0900\n"
+"Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=EUC-JP\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
 #: ../../../man/po4a/../C/deb-old.5:1
 #, no-wrap
 msgid "deb-old"
-msgstr ""
+msgstr "deb-old"
 
 # type: TH
 #: ../../../man/po4a/../C/deb-old.5:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: ../../../man/po4a/../C/deb-old.5:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
 msgstr "Debian Project"
 
 # type: TH
 #: ../../../man/po4a/../C/deb-old.5:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian"
 msgstr "Debian"
 
 # type: SH
 #: ../../../man/po4a/../C/deb-old.5:2
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
-msgstr "Ì¾¾Î"
+msgstr "åç§°"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:4
-#, fuzzy
 msgid "deb-old - old style Debian binary package format"
-msgstr "deb-old - Debian ¥Ğ¥¤¥Ê¥ê¥Ñ¥Ã¥±¡¼¥¸µì·Á¼°¥Õ¥©¡¼¥Ş¥Ã¥È"
+msgstr "deb-old - Debian ãƒã‚¤ãƒŠãƒªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸æ—§å½¢å¼ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆ"
 
 # type: SH
 #: ../../../man/po4a/../C/deb-old.5:5
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
-msgstr "½ñ¼°"
+msgstr "æ›¸å¼"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:7
-#, fuzzy
 msgid "I<filename>B<.deb>"
 msgstr "I<filename>B<.deb>"
 
 # type: SH
 #: ../../../man/po4a/../C/deb-old.5:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DESCRIPTION"
-msgstr "ÀâÌÀ"
+msgstr "èª¬æ˜"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:17
-#, fuzzy
 msgid ""
 "The B<.deb> format is the Debian binary package file format. This manual "
 "page describes the B<old> format, used before Debian 0.93. Please see B<deb>"
 "(5)  for details of the new format."
 msgstr ""
-"B<.deb> ¥Õ¥©¡¼¥Ş¥Ã¥È¤Ï Debian ¥Ğ¥¤¥Ê¥ê¥Ñ¥Ã¥±¡¼¥¸¤Î¥Õ¥¡¥¤¥ë·Á¼°¤Ç¤¢¤ë¡£ ¤³¤Î¥Ş"
-"¥Ë¥å¥¢¥ë¤Ç¤Ï¡¢Debian 0.93 °ÊÁ°¤Ë»ÈÍÑ¤µ¤ì¤Æ¤¤¤¿ B<µì·Á¼°> ¤Ë¤Ä¤¤¤Æµ­½Ò¤¹¤ë¡£¿·"
-"·Á¼°¤Î¾ÜºÙ¤Ë¤Ä¤¤¤Æ¤Ï B<deb>(5)  ¤ò»²¾È¤µ¤ì¤¿¤¤¡£"
+"B<.deb> ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆã¯ Debian ãƒã‚¤ãƒŠãƒªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®ãƒ•ã‚¡ã‚¤ãƒ«å½¢å¼ã§ã‚ã‚‹ã€‚ã“ã®ãƒ"
+"ãƒ‹ãƒ¥ã‚¢ãƒ«ã§ã¯ã€Debian 0.93 ä»¥å‰ã«ä½¿ç”¨ã•ã‚Œã¦ã„ãŸ B<æ—§å½¢å¼> ã«ã¤ã„ã¦è¨˜è¿°ã™ã‚‹ã€‚æ–°"
+"å½¢å¼ã®è©³ç´°ã«ã¤ã„ã¦ã¯ B<deb>(5) ã‚’å‚ç…§ã•ã‚ŒãŸã„ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/deb-old.5:18
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "FORMAT"
-msgstr "¥Õ¥©¡¼¥Ş¥Ã¥È"
+msgstr "ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆ"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:21
-#, fuzzy
 msgid ""
 "The file is two lines of format information as ASCII text, followed by two "
 "concatenated gzipped ustar files."
 msgstr ""
-"2 ¹Ô¤Î¥Õ¥©¡¼¥Ş¥Ã¥È¾ğÊó¤ò ASCII ¥Æ¥­¥¹¥È¥Õ¥¡¥¤¥ë¤¬¤¢¤ê¡¢¤½¤ì¤Ë 2 ¤Ä¤Î °µ½Ì "
-"tar ¥Õ¥¡¥¤¥ë¤¬Â³¤¯¡£"
+"2 è¡Œã® ASCII ãƒ†ã‚­ã‚¹ãƒˆã«ã‚ˆã‚‹ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆæƒ…å ±ãŒã‚ã‚Šã€ãã‚Œã« 2 ã¤ã® gzip åœ§ç¸®ã•ã‚ŒãŸ "
+"ustar ãƒ•ã‚¡ã‚¤ãƒ«ãŒç¶šãã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:25
-#, fuzzy
 msgid ""
 "The first line is the format version number padded to 8 digits, and is "
 "B<0.939000> for all old-format archives."
 msgstr ""
-"1 ¹ÔÌÜ¤Ï 8 ·å¤Ë¤½¤í¤¨¤¿¥Õ¥©¡¼¥Ş¥Ã¥È¥Ğ¡¼¥¸¥ç¥óÈÖ¹æ¤Ç¤¢¤ê¡¢ µì·Á¼°¥¢¡¼¥«¥¤¥Ö¤Ï"
-"¤¹¤Ù¤Æ B<0.939000> ¤Ç¤¢¤ë¡£"
+"1 è¡Œç›®ã¯ 8 æ¡ã«ãã‚ãˆãŸãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆãƒãƒ¼ã‚¸ãƒ§ãƒ³ç•ªå·ã§ã‚ã‚Šã€æ—§å½¢å¼ã‚¢ãƒ¼ã‚«ã‚¤ãƒ–ã¯"
+"ã™ã¹ã¦ B<0.939000> ã§ã‚ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:28
-#, fuzzy
 msgid ""
 "The second line is a decimal string (without leading zeroes) giving the "
 "length of the first gzipped tarfile."
 msgstr ""
-"2 ¹ÔÌÜ¤Ï¤Ò¤È¤ÄÌÜ¤Î°µ½Ì tar ¥Õ¥¡¥¤¥ë¤ÎÂç¤­¤µ¤òÍ¿¤¨¤ë(0 ¤«¤é»Ï¤Ş¤é¤Ê¤¤)  ½½¿Ê¿ô"
-"¤Ç¤¢¤ë¡£"
+"2 è¡Œç›®ã¯ã²ã¨ã¤ç›®ã® gzip åœ§ç¸® tar ãƒ•ã‚¡ã‚¤ãƒ«ã®å¤§ãã•ã‚’ä¸ãˆã‚‹(0 ã‹ã‚‰å§‹ã¾ã‚‰ãªã„) åé€²æ•°"
+"ã§ã‚ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:30
-#, fuzzy
 msgid "Each of these lines is terminated with a single newline character."
-msgstr "¤½¤ì¤¾¤ì¤Î¹Ô¤Î½ª¤ï¤ê¤Ï²ş¹ÔÊ¸»ú¤Ò¤È¤Ä¤Ç¤¢¤ë¡£"
+msgstr "ãã‚Œãã‚Œã®è¡Œã®çµ‚ã‚ã‚Šã¯æ”¹è¡Œæ–‡å­—ã²ã¨ã¤ã§ã‚ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:35
-#, fuzzy
 msgid ""
 "The first tarfile contains the control information, as a series of ordinary "
 "files. The file B<control> must be present, as it contains the core control "
 "information."
 msgstr ""
-"1 ÈÖÌÜ¤Î tar ¥Õ¥¡¥¤¥ë¤Ï¡¢À©¸æ¾ğÊó¤òÊ¿Ê¸¥Õ¥¡¥¤¥ë·²¤È¤·¤Æ´Ş¤à¡£¾ÜºÙ¤Ï I<Debian "
-"Packaging Manual, section 2.2>.  ¤Ëµ­½Ò¤µ¤ì¤Æ¤¤¤ë¡£ B<control> ¥Õ¥¡¥¤¥ë¤ÏÉ¬¿Ü"
-"¤Ç¤¢¤ê¡¢Ãæ¿´¤È¤Ê¤ëÀ©¸æ¾ğÊó¤ò´Ş¤à¡£"
+"1 ç•ªç›®ã® tar ãƒ•ã‚¡ã‚¤ãƒ«ã¯ã€åˆ¶å¾¡æƒ…å ±ã‚’å¹³æ–‡ãƒ•ã‚¡ã‚¤ãƒ«ç¾¤ã¨ã—ã¦å«ã‚€ã€‚B<control> ãƒ•ã‚¡ã‚¤ãƒ«ã¯å¿…é ˆ"
+"ã§ã‚ã‚Šã€ä¸­å¿ƒã¨ãªã‚‹åˆ¶å¾¡æƒ…å ±ã‚’å«ã‚€ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:46
-#, fuzzy
 msgid ""
 "In some very old archives, the files in the control tarfile may optionally "
 "be in a B<DEBIAN> subdirectory. In that case, the B<DEBIAN> subdirectory "
@@ -143,43 +134,39 @@ msgid ""
 "files in that directory. Optionally the control tarfile may contain an entry "
 "for `B<.>', that is, the current directory."
 msgstr ""
-"Èó¾ï¤Ë¸Å¤¤¥¢¡¼¥«¥¤¥Ö¤Ç¤Ï¡¢ control tar ¥Õ¥¡¥¤¥ëÃæ¤Î¥Õ¥¡¥¤¥ë¤¬ B<DEBIAN> ¥µ¥Ö"
-"¥Ç¥£¥ì¥¯¥È¥ê¤Ë¤¢¤ë¤³¤È¤â¤¢¤ë¡£¤³¤Î¾ì¹ç¡¢ control tar ¥Õ¥¡¥¤¥ë¤Ë¤â B<DEBIAN> "
-"¥µ¥Ö¥Ç¥£¥ì¥¯¥È¥ê¤¬Â¸ºß¤·¡¢ control tar ¥Õ¥¡¥¤¥ë¤Ï¤½¤Î¥Ç¥£¥ì¥¯¥È¥êÆâ¤Ë¤Î¤ß¥Õ¥¡"
-"¥¤¥ë¤òÊİÍ­¤¹¤ë¡£ control tar ¥Õ¥¡¥¤¥ë¤Ï¡¢ `B<.>', ¤Ä¤Ş¤ê¥«¥ì¥ó¥È¥Ç¥£¥ì¥¯¥È¥ê"
-"¤Ë¥Õ¥¡¥¤¥ë¤ò´Ş¤à¤³¤È¤â¤¢¤ë¡£"
+"éå¸¸ã«å¤ã„ã‚¢ãƒ¼ã‚«ã‚¤ãƒ–ã§ã¯ã€ control tar ãƒ•ã‚¡ã‚¤ãƒ«ä¸­ã®ãƒ•ã‚¡ã‚¤ãƒ«ãŒ B<DEBIAN> ã‚µãƒ–"
+"ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã«ã‚ã‚‹ã“ã¨ã‚‚ã‚ã‚‹ã€‚ã“ã®å ´åˆã€ control tar ãƒ•ã‚¡ã‚¤ãƒ«ã«ã‚‚ B<DEBIAN> "
+"ã‚µãƒ–ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªãŒå­˜åœ¨ã—ã€ control tar ãƒ•ã‚¡ã‚¤ãƒ«ã¯ãã®ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªå†…ã«ã®ã¿ãƒ•ã‚¡"
+"ã‚¤ãƒ«ã‚’ä¿æœ‰ã™ã‚‹ã€‚ control tar ãƒ•ã‚¡ã‚¤ãƒ«ã¯ã€ `B<.>', ã¤ã¾ã‚Šã‚«ãƒ¬ãƒ³ãƒˆãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒª"
+"ã«ãƒ•ã‚¡ã‚¤ãƒ«ã‚’å«ã‚€ã“ã¨ã‚‚ã‚ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:50
-#, fuzzy
 msgid ""
 "The second gzipped tarfile is the filesystem archive, containing pathnames "
 "relative to the root directory of the system to be installed on. The "
 "pathnames do not have leading slashes."
 msgstr ""
-"2 ÈÖÌÜ¤Î°µ½Ì tar ¥Õ¥¡¥¤¥ë¤Ï¥Õ¥¡¥¤¥ë¥·¥¹¥Æ¥à¥¢¡¼¥«¥¤¥Ö¤Ç¤¢¤ê¡¢ ¥¤¥ó¥¹¥È¡¼¥ë¤µ"
-"¤ì¤ë¥·¥¹¥Æ¥à¤Î¥ë¡¼¥È¥Ç¥£¥ì¥¯¥È¥ê¤«¤é¤ÎÁêÂĞ¥Ñ¥¹Ì¾¤ò ´Ş¤ó¤Ç¤¤¤ë¡£¥Ñ¥¹Ì¾¤ÎÀèÆ¬¤Ë"
-"¥¹¥é¥Ã¥·¥å(/)¤Ï¤Ê¤¤¡£"
+"2 ç•ªç›®ã® gzip åœ§ç¸® tar ãƒ•ã‚¡ã‚¤ãƒ«ã¯ãƒ•ã‚¡ã‚¤ãƒ«ã‚·ã‚¹ãƒ†ãƒ ã‚¢ãƒ¼ã‚«ã‚¤ãƒ–ã§ã‚ã‚Šã€ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã•"
+"ã‚Œã‚‹ã‚·ã‚¹ãƒ†ãƒ ã®ãƒ«ãƒ¼ãƒˆãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã‹ã‚‰ã®ç›¸å¯¾ãƒ‘ã‚¹åã‚’å«ã‚“ã§ã„ã‚‹ã€‚ãƒ‘ã‚¹åã®å…ˆé ­ã«"
+"ã‚¹ãƒ©ãƒƒã‚·ãƒ¥(/)ã¯ãªã„ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/deb-old.5:51
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SEE ALSO"
-msgstr "´ØÏ¢¹àÌÜ"
+msgstr "é–¢é€£é …ç›®"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-old.5:54
-#, fuzzy
 msgid "B<deb>(5), B<dpkg-deb>(1), B<deb-control>(5)."
 msgstr ""
-"B<deb>(5), B<dpkg-deb>(1), B<deb-control>(5), I<Debian Packaging Manual>."
+"B<deb>(5), B<dpkg-deb>(1), B<deb-control>(5)."
 
 # type: TH
-#, fuzzy
 #~ msgid "DEB-OLD"
 #~ msgstr "DEB-OLD"
 
 # type: TH
-#, fuzzy
 #~ msgid "January 2000"
 #~ msgstr "January 2000"
