--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,19 @@
+2006-08-02  KISE Hiroshi  <kise@fuyuneko.jp>
+
+	* po4a/add_ja/deb.5.ja.add: Recode the addendum in UTF-8.
+	* po4a/add_ja/deb-old.5.ja.add: Likewise.
+	* po4a/add_ja/822-date.1.ja.add: Likewise.
+	* po4a/add_ja/dpkg-checkbuilddeps.1.ja.add: Likewise.
+	* po4a/deb.5/deb.5.cfg: Specify the po4a options for the Japanese
+	translation.
+	* po4a/deb-old.5/deb-old.5.cfg: Likewise.
+	* po4a/822-date.1/822-date.1.cfg: Likewise.
+	* po4a/dpkg-checkbuilddeps.1/dpkg-checkbuilddeps.1.cfg: Likewise.
+	* po4a/deb.5/po/ja.po: Updated translation.
+	* po4a/deb-old.5/po/ja.po: Likewise.
+	* po4a/822-date.1/po/ja.po: Likewise.
+	* po4a/dpkg-checkbuilddeps.1/po/ja.po: Likewise.
+
 2006-07-29  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po4a/dpkg-statoverride.8/dpkg-statoverride.8.cfg: Add the `de'
