--- a/man/po4a/822-date.1/po/ja.po
+++ b/man/po4a/822-date.1/po/ja.po
@@ -1,21 +1,22 @@
+# translation of 822-date.1.ja.po to Japanese
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Copyright (C) 2006 Free Software Foundation, Inc.
+# KISE Hiroshi <kise@fuyuneko.jp>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-07-23 21:14+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"POT-Creation-Date: 2006-07-25 22:19+0900\n"
+"PO-Revision-Date: 2006-08-02 22:25+0900\n"
+"Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=EUC-JP\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:3
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "822-date"
 msgstr "B<822-date>"
 
@@ -23,137 +24,124 @@ msgstr "B<822-date>"
 #: ../../../man/po4a/../C/822-date.1:3
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: ../../../man/po4a/../C/822-date.1:3
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
 msgstr "Debian Project"
 
 # type: TH
 #: ../../../man/po4a/../C/822-date.1:3
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg utilities"
 msgstr "dpkg utilities"
 
 # type: SH
 #: ../../../man/po4a/../C/822-date.1:4
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
-msgstr "Ì¾Á°"
+msgstr "åå‰"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:6
-#, fuzzy
 msgid "822-date - Print date and time in RFC822 format"
-msgstr "822-date - RFC822¥Õ¥©¡¼¥Ş¥Ã¥È¤ÎÆüÉÕ¤È»ş´Ö¤Î°õ»ú"
+msgstr "822-date - RFC822ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆã®æ—¥ä»˜ã¨æ™‚é–“ã®è¡¨ç¤º"
 
 # type: SH
 #: ../../../man/po4a/../C/822-date.1:7
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
-msgstr "½ñ¼°"
+msgstr "æ›¸å¼"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:9
-#, fuzzy
 msgid "B<822-date>"
 msgstr "B<822-date>"
 
 # type: SH
 #: ../../../man/po4a/../C/822-date.1:10
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DESCRIPTION"
-msgstr "ÀâÌÀ"
+msgstr "èª¬æ˜"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:14
-#, fuzzy
 msgid ""
 "B<822-date> displays the current date and time in the format described in "
 "RFC822, using a numeric timezone offset as recommended in RFC1123."
 msgstr ""
-"B<822-date> ¤Ï RFC822 ¤ËÀâÌÀ¤µ¤ì¤Æ¤¤¤ë¥Õ¥©¡¼¥Ş¥Ã¥È¡¢RFC1123 ¤Ç¿ä¾©¤µ¤ì¤Æ¤¤¤ë"
-"¿ô»ú¤Ë ¤è¤ë¥¿¥¤¥à¥¾¡¼¥ó¥ª¥Õ¥»¥Ã¥È¤ò»È¤Ã¤Æ¸½ºß¤ÎÆüÉÕ¤È»ş´Ö¤òÉ½¼¨¤·¤Ş¤¹¡£"
+"B<822-date> ã¯ RFC822 ã«èª¬æ˜ã•ã‚Œã¦ã„ã‚‹ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆã€RFC1123 ã§æ¨å¥¨ã•ã‚Œã¦ã„ã‚‹"
+"æ•°å­—ã«ã‚ˆã‚‹ã‚¿ã‚¤ãƒ ã‚¾ãƒ¼ãƒ³ã‚ªãƒ•ã‚»ãƒƒãƒˆã‚’ä½¿ã£ã¦ç¾åœ¨ã®æ—¥ä»˜ã¨æ™‚é–“ã‚’è¡¨ç¤ºã™ã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/822-date.1:15
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "OPTIONS"
-msgstr "¥ª¥×¥·¥ç¥ó"
+msgstr "ã‚ªãƒ—ã‚·ãƒ§ãƒ³"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:18
-#, fuzzy
 msgid "B<822-date> does not take any arguments or options."
-msgstr "B<822-date> ¤Ë¤Ï°ú¿ô¡¢¥ª¥×¥·¥ç¥ó¤Ï¤¢¤ê¤Ş¤»¤ó¡£"
+msgstr "B<822-date> ã«ã¯å¼•æ•°ã‚„ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã¯ãªã„ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/822-date.1:19
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "BUGS"
-msgstr "¥Ğ¥°"
+msgstr "ãƒã‚°"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:22
-#, fuzzy
 msgid "This facility really ought to be part of B<date>(1)."
-msgstr "¤³¤Îµ¡Ç½¤Ï¼Âºİ¤Ë¤Ï B<date>(1)  ¤Î°ìÉô¤Ç¤¢¤ë¤Ù¤­¤Ç¤¹¡£"
+msgstr "ã“ã®æ©Ÿèƒ½ã¯å®Ÿéš›ã«ã¯ B<date>(1) ã®ä¸€éƒ¨ã§ã‚ã‚‹ã¹ãã§ã‚ã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/822-date.1:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SEE ALSO"
-msgstr "´ØÏ¢¹àÌÜ"
+msgstr "é–¢é€£é …ç›®"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:26
-#, fuzzy
 msgid "I<Standard for the Format of ARPA Internet Text Messages> (RFC822),"
 msgstr ""
-"I<ARPA¥¤¥ó¥¿¡¼¥Í¥Ã¥È¥Æ¥­¥¹¥È¥á¥Ã¥»¡¼¥¸¤Î¥Õ¥©¡¼¥Ş¥Ã¥È¤ÎÉ¸½à (Standard for the "
+"I<ARPAã‚¤ãƒ³ã‚¿ãƒ¼ãƒãƒƒãƒˆãƒ†ã‚­ã‚¹ãƒˆãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã®ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆã®æ¨™æº– (Standard for the "
 "Format of ARPA Internet Text Messages)> (RFC822),"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:29
-#, fuzzy
 msgid ""
 "I<Requirements for Internet Hosts -- Application and Support> (RFC1123) "
 "section 5.2.14,"
 msgstr ""
-"I<¥¤¥ó¥¿¡¼¥Í¥Ã¥È¥Û¥¹¥È¤Ø¤ÎÍ×µá»ö¹à -- ¥¢¥×¥ê¥±¡¼¥·¥ç¥ó¤È¥µ¥İ¡¼¥È "
+"I<ã‚¤ãƒ³ã‚¿ãƒ¼ãƒãƒƒãƒˆãƒ›ã‚¹ãƒˆã¸ã®è¦æ±‚äº‹é … -- ã‚¢ãƒ—ãƒªã‚±ãƒ¼ã‚·ãƒ§ãƒ³ã¨ã‚µãƒãƒ¼ãƒˆ "
 "(Requirements for Internet Hosts -- Application and Support)> (RFC1123) "
-"5.2.14 Àá,"
+"5.2.14 ç¯€,"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:31
-#, fuzzy
 msgid "B<date>(1)."
 msgstr "B<date>(1)"
 
 # type: SH
 #: ../../../man/po4a/../C/822-date.1:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "AUTHOR"
-msgstr "Ãø¼Ô"
+msgstr "è‘—è€…"
 
 # type: Plain text
 #: ../../../man/po4a/../C/822-date.1:35
-#, fuzzy
 msgid ""
 "B<822-date> and this manpage were written by Ian Jackson. They are hereby "
 "placed by him into the public domain."
-msgstr ""
-"B<822-date> ¤È ¤³¤Î¥Ş¥Ë¥å¥¢¥ë¥Ú¡¼¥¸¤Ï Ian Jackson ¤Ë¤è¤Ã¤Æ¤«¤«¤ì¡¢Èà¤Ë¤è¤Ã¤Æ "
-"public domain ¤Ê¤â¤Î¤È¤·¤Æ¤³¤³¤Ë´Ş¤Ş¤ì¤Æ¤¤¤Ş¤¹¡£"
+msgstr "B<822-date> ã¨ã“ã®ãƒãƒ‹ãƒ¥ã‚¢ãƒ«ãƒšãƒ¼ã‚¸ã¯ Ian Jackson ã«ã‚ˆã£ã¦æ›¸ã‹ã‚ŒãŸã€‚ãã—ã¦ã€å½¼ã®æ‰‹ã«ã‚ˆã£ã¦ public domain ã¨ã•ã‚Œã¦ã„ã‚‹ã€‚"
 
 # type: TH
-#, fuzzy
 #~ msgid "822-DATE"
 #~ msgstr "822-DATE"
 
 # type: TH
-#, fuzzy
 #~ msgid "14th August 1996"
 #~ msgstr "14th August 1996"
