--- a/man/po4a/dpkg-checkbuilddeps.1/po/ja.po
+++ b/man/po4a/dpkg-checkbuilddeps.1/po/ja.po
@@ -1,155 +1,146 @@
+# translation of dpkg-checkbuilddeps.1.ja.po to Japanese
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Copyright (C) 2006 Free Software Foundation, Inc.
+# KISE Hiroshi <kise@fuyuneko.jp>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-08-02 22:25+0900\n"
+"Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=EUC-JP\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-checkbuilddeps"
-msgstr "B<dpkg-checkbuilddeps> -B [I<¥³¥ó¥È¥í¡¼¥ë¥Õ¥¡¥¤¥ë>]"
+msgstr "dpkg-checkbuilddeps"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:1
 #, no-wrap
 msgid "2006-05-23"
-msgstr ""
+msgstr "2006-05-23"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
-msgstr "Debian project"
+msgstr "Debian Project"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg utilities"
 msgstr "dpkg utililties"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:2
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
-msgstr "Ì¾Á°"
+msgstr "åå‰"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:4
-#, fuzzy
 msgid "dpkg-checkbuilddeps - check build dependencies and conflicts"
-msgstr "dpkg-checkbuilddeps -- ¥Ó¥ë¥É°ÍÂ¸¤È¾×ÆÍ¤Î¥Á¥§¥Ã¥¯"
+msgstr "dpkg-checkbuilddeps - ãƒ“ãƒ«ãƒ‰ä¾å­˜ã¨è¡çªã®ãƒã‚§ãƒƒã‚¯"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:5
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
-msgstr "½ñ¼°"
+msgstr "æ›¸å¼"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:7
-#, fuzzy
 msgid "B<dpkg-checkbuilddeps> B<-B> [I<control-file>]"
-msgstr "B<dpkg-checkbuilddeps> -B [I<¥³¥ó¥È¥í¡¼¥ë¥Õ¥¡¥¤¥ë>]"
+msgstr "B<dpkg-checkbuilddeps> B<-B> [I<ã‚³ãƒ³ãƒˆãƒ­ãƒ¼ãƒ«ãƒ•ã‚¡ã‚¤ãƒ«>]"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DESCRIPTION"
-msgstr "ÀâÌÀ"
+msgstr "èª¬æ˜"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:12
-#, fuzzy
 msgid ""
 "This program checks the installed packages in the system against the build "
 "dependencies and build conflicts listed in the control file. If any are not "
 "met, it displays them and exits with a nonzero return code."
 msgstr ""
-"¤³¤Î¥×¥í¥°¥é¥à¤Ï¥³¥ó¥È¥í¡¼¥ë¥Õ¥¡¥¤¥ëÃæ¤Ë¥ê¥¹¥È¤µ¤ì¤Æ¤¤¤ë¥Ó¥ë¥É°ÍÂ¸¤È ¥Ó¥ë¥É¾×"
-"ÆÍ¤Ë´Ø¤·¤Æ¡¢¥·¥¹¥Æ¥à¤Ë¥¤¥ó¥¹¥È¡¼¥ë¤µ¤ì¤Æ¤¤¤ë¥Ñ¥Ã¥±¡¼¥¸¤ò ¥Á¥§¥Ã¥¯¤¹¤ë¡£ ¤â"
-"¤·¡¢Â­¤ê¤Ê¤¤¤â¤Î¤ä¾×ÆÍ¤·¤Æ¤¤¤ëÊª¤¬¤¢¤ë¤Ê¤é¡¢¤½¤ì¤é¤òÉ½¼¨¤·¤Æ 0 °Ê³°¤Î ÊÖ¤êÃÍ"
-"¤òÊÖ¤·¤Æ½ªÎ»¤¹¤ë¡£"
+"ã“ã®ãƒ—ãƒ­ã‚°ãƒ©ãƒ ã¯ã‚³ãƒ³ãƒˆãƒ­ãƒ¼ãƒ«ãƒ•ã‚¡ã‚¤ãƒ«ä¸­ã«ãƒªã‚¹ãƒˆã•ã‚Œã¦ã„ã‚‹ãƒ“ãƒ«ãƒ‰ä¾å­˜ã¨ãƒ“ãƒ«ãƒ‰è¡"
+"çªã«é–¢ã—ã¦ã€ã‚·ã‚¹ãƒ†ãƒ ã«ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã•ã‚Œã¦ã„ã‚‹ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚’ãƒã‚§ãƒƒã‚¯ã™ã‚‹ã€‚ã‚‚"
+"ã—ã€è¶³ã‚Šãªã„ã‚‚ã®ã‚„è¡çªã—ã¦ã„ã‚‹ç‰©ãŒã‚ã‚‹ãªã‚‰ã€ãã‚Œã‚‰ã‚’è¡¨ç¤ºã—ã¦ 0 ä»¥å¤–ã®è¿”ã‚Šå€¤"
+"ã‚’è¿”ã—ã¦çµ‚äº†ã™ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:15
-#, fuzzy
 msgid ""
 "By default, I<debian/control> is read, but an alternate control filename may "
 "be specified on the command line."
-msgstr ""
-"¥Ç¥£¥Õ¥©¥ë¥È¤Ç¤Ï¡¢B<debian/control> ¤¬ÆÉ¤Ş¤ì¤ë¤¬¡¢ÊÌ¤Î¥³¥ó¥È¥í¡¼¥ë ¥Õ¥¡¥¤¥ëÌ¾"
-"¤ò¥³¥Ş¥ó¥É¥é¥¤¥ó¤Ë»ØÄê¤¹¤ë¤³¤È¤â¤Ç¤­¤ë¡£"
+msgstr "ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã§ã¯ã€I<debian/control> ãŒèª­ã¾ã‚Œã‚‹ãŒã€åˆ¥ã®ã‚³ãƒ³ãƒˆãƒ­ãƒ¼ãƒ«ãƒ•ã‚¡ã‚¤ãƒ«åã‚’ã‚³ãƒãƒ³ãƒ‰ãƒ©ã‚¤ãƒ³ã«æŒ‡å®šã™ã‚‹ã“ã¨ã‚‚ã§ãã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "OPTIONS"
-msgstr "¥ª¥×¥·¥ç¥ó"
+msgstr "ã‚ªãƒ—ã‚·ãƒ§ãƒ³"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-B>"
-msgstr "I<-B>"
+msgstr "B<-B>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:21
-#, fuzzy
 msgid ""
 "Ignore I<Build-Depends-Indep> lines. Use when no arch-indep packages will be "
 "built."
 msgstr ""
-"Build-Depends-Indep ¹Ô¤òÌµ»ë¤¹¤ë¡£¥¢¡¼¥­¥Æ¥¯¥Á¥ã¤ËÈó°ÍÂ¸¤Ê¥Ñ¥Ã¥±¡¼¥¸ ¤¬¥Ó¥ë¥É"
-"¤µ¤ì¤Ê¤¤»ş¤ËÍøÍÑ¤¹¤ë¡£"
+"I<Build-Depends-Indep> è¡Œã‚’ç„¡è¦–ã™ã‚‹ã€‚ã‚¢ãƒ¼ã‚­ãƒ†ã‚¯ãƒãƒ£ã«éä¾å­˜ãªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ãŒãƒ“"
+"ãƒ«ãƒ‰ã•ã‚Œãªã„æ™‚ã«åˆ©ç”¨ã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:21
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-h>"
-msgstr "I<-B>"
+msgstr "B<-h>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:24
 msgid "Print a usage message."
-msgstr ""
+msgstr "åˆ©ç”¨æ–¹æ³•ã‚’è¡¨ç¤ºã™ã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:25
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "AUTHOR"
-msgstr "ºî¼Ô"
+msgstr "ä½œè€…"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:27
-#, fuzzy
 msgid "Copyright 2001 Joey Hess"
 msgstr "Copyright 2001 Joey Hess"
 
 # type: UR
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:27
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "mailto:joeyh@debian.org"
 msgstr "mailto:joeyh@debian.org"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:29
-#, fuzzy
 msgid "E<lt>joeyh@debian.orgE<gt>."
-msgstr "E<lt>joeyh@debian.orgE<gt>"
+msgstr "E<lt>joeyh@debian.orgE<gt>."
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:32
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
@@ -158,11 +149,9 @@ msgstr ""
 "for copying conditions.  There is NO warranty."
 
 # type: TH
-#, fuzzy
 #~ msgid "DPKG-CHECKBUILDDEPS"
 #~ msgstr "DPKG-CHECKBUILDDEPS"
 
 # type: TH
-#, fuzzy
 #~ msgid "February 2001"
 #~ msgstr "February 2001"
